--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
     package="com.asutaupsi.taupsi">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-    <application android:allowBackup="true"
+    <application
+        android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
         android:supportsRtl="true"
@@ -10,21 +11,13 @@
         android:name=".infrastructure.TauPsiApplication">
 
     <activity android:name=".activities.MainActivity"
-        android:screenOrientation="portrait"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:screenOrientation="portrait">
 
         <intent-filter>
             <action android:name="android.intent.action.MAIN"/>
             <category android:name="android.intent.category.LAUNCHER"/>
         </intent-filter>
 
-
-
     </activity>
-
-
     </application>
-
-
 </manifest>
