--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:theme="@style/AppTheme"
         android:name=".infrastructure.TauPsiApplication">
 
-    <activity android:name=".activities.MainActivity"
+
+
+        <activity android:name=".activities.MainActivity"
         android:screenOrientation="portrait">
 
         <intent-filter>
@@ -18,6 +20,17 @@
             <category android:name="android.intent.category.LAUNCHER"/>
         </intent-filter>
 
-    </activity>
+        </activity>
+
+
+        <activity android:name=".activities.YoutubePlayerActivity"
+            android:theme="@style/AlertDialogCustom"/>
+
+        <activity android:name=".activities.PhotoPagerActivity"
+            android:theme="@style/AlertDialogCustomAppTheme"/>
+
     </application>
+
+
 </manifest>
+
