--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,11 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.firebase:firebase-client-android:2.3.1+'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
 }
+
+
+
+
+
