--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 
     <application
         android:allowBackup="true"
@@ -33,6 +35,10 @@
 
         <activity android:name=".activities.EventPhotoPagerActivity"
             android:theme="@style/AlertDialogCustomAppTheme"/>
+
+        <activity android:name=".activities.BrotherPagerActivity"
+            android:theme="@style/AnotherDialogCustom"
+            />
 
     </application>
 
