--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
     package="com.asutaupsi.taupsi">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 
     <application
@@ -13,13 +15,16 @@
         android:icon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name=".infrastructure.TauPsiApplication">
+        android:name=".infrastructure.TauPsiApplication"
+        android:largeHeap="true"
+        >
 
 
         <activity
             android:name=".activities.SplashActivity"
             android:theme="@style/SplashTheme"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            >
 
         <intent-filter>
             <action android:name="android.intent.action.MAIN"/>
@@ -39,6 +44,25 @@
         <activity android:name=".activities.BrotherPagerActivity"
             android:theme="@style/AnotherDialogCustom"
             />
+
+        <activity android:name=".activities.AsuMapActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            />
+
+        <activity android:name=".activities.MapsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            />
+
+
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="Enter your Key here"/>
+
+
+
 
     </application>
 
