[UI Competed./Just need data]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="Enter your Key here"/>
+            android:value="Enter Key Here"/>
 
 
 
